Changed appearence tmux statusbar. Added a few keybindings for tmux.

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -3,3 +3,33 @@ bind -n M-h select-pane -L
 bind -n M-j select-pane -D 
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
+
+bind -n M-h split-window -h     
+bind -n M-v split-window -v
+bind -n M-x kill-pane
+
+bind r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
+
+# Content and location of the statusbar.
+set -g status-left-length 85 
+# IP
+set -g status-left "#(ifconfig | awk -F '[ :]+' '/inet addr/ && !/127.0/ {print $4}')" 
+# UPTIME [H:MM] - DATE [dd-nn-YYYY HH:MM]
+set -g status-right '#[fg=cyan,bg=default]#(uptime | awk \"{print \\$3}\"|sed \"s/,//\")#[fg=white] - #[fg=cyan]%d-%m-%Y %H:%M' 
+set -g status-justify centre 
+
+# Colors
+set-option -g status-fg cyan
+set-option -g status-bg black
+set-option -g status-attr default
+
+set-window-option -g window-status-fg cyan
+set-window-option -g window-status-bg default
+set-window-option -g window-status-attr dim
+
+set-window-option -g window-status-current-fg white
+set-window-option -g window-status-current-bg black
+set-window-option -g window-status-current-attr bright
+
+set-option -g message-fg cyan
+set-option -g message-bg black
