--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -13,7 +13,7 @@ bind r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
 # Content and location of the statusbar.
 set -g status-left-length 85 
 # IP
-set -g status-left "#(ifconfig | awk -F '[ :]+' '/inet addr/ && !/127.0/ {print $4}')" 
+set -g status-left "#(/sbin/ifconfig | awk -F '[ :]+' '/inet addr/ && !/127.0/ {print $4}')" 
 # UPTIME [H:MM] - DATE [dd-nn-YYYY HH:MM]
 set -g status-right '#[fg=cyan,bg=default]#(uptime | awk \"{print \\$3}\"|sed \"s/,//\")#[fg=white] - #[fg=cyan]%d-%m-%Y %H:%M' 
 set -g status-justify centre 
