Enabled 256 colors. Added airline.vim. Added colorscheme harlequin.

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -32,3 +32,5 @@ set-window-option -g window-status-current-attr bright
 
 set-option -g message-fg cyan
 set-option -g message-bg black
+
+set -g default-terminal "screen-256color"
