--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -4,13 +4,28 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
+# Split window vertically with Alt-v
 bind -n M-v split-window -v
+# And kill a window with Alt-x
 bind -n M-x kill-pane
+
+# Switch windows alt+number
+bind-key -n M-0 select-window -t 0
+bind-key -n M-1 select-window -t 1
+bind-key -n M-2 select-window -t 2
+bind-key -n M-3 select-window -t 3
+bind-key -n M-4 select-window -t 4
+bind-key -n M-5 select-window -t 5
+bind-key -n M-6 select-window -t 6
+bind-key -n M-7 select-window -t 7
+bind-key -n M-8 select-window -t 8
+bind-key -n M-9 select-window -t 9
 
 bind r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
 
 # Content and location of the statusbar.
 set -g status-left-length 85 
+
 # IP
 set -g status-left "#(/sbin/ifconfig | awk -F '[ :]+' '/inet addr/ && !/127.0/ {print $4}')" 
 # UPTIME [H:MM] - DATE [dd-nn-YYYY HH:MM]
