Disabled autorenaming of tmux windows.

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -49,3 +49,6 @@ set-option -g message-fg cyan
 set-option -g message-bg black
 
 set -g default-terminal "screen-256color"
+
+# Disable autorenaming of windows.
+set-option -g allow-rename off
