Enable lock screen with Super+l.

--- a/home/.i3/config
+++ b/home/.i3/config
@@ -155,3 +155,6 @@ bar {
 # change volume
 bindsym $mod+equal exec pactl set-sink-volume 1 +5%
 bindsym $mod+minus exec pactl set-sink-volume 1 -- -5%
+
+# lock screen
+bindsym Mod4+l exec i3lock -c 111111
