Named workspaces. Edited keys to use edit audio levels.

--- a/home/.i3/config
+++ b/home/.i3/config
@@ -9,7 +9,16 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
+# Set modifier key to Super (aka Windows) key.
 set $mod Mod4
+
+# Write workspace names to variables.
+set $ws1 "1:editor"
+set $ws2 "2:browser"
+set $ws6 "6:irrsi"
+set $ws7 "7:hipchat"
+set $ws8 "8:telegram"
+set $ws9 "9:music"
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -89,27 +98,27 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 # switch to workspace
-bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
+bindsym $mod+1 workspace $ws1
+bindsym $mod+2 workspace $ws2
 bindsym $mod+3 workspace 3
 bindsym $mod+4 workspace 4
 bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
+bindsym $mod+6 workspace $ws6
+bindsym $mod+7 workspace $ws7
+bindsym $mod+8 workspace $ws8 
+bindsym $mod+9 workspace $ws9
 bindsym $mod+0 workspace 10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1
+bindsym $mod+Shift+1 move container to workspace $ws1
 bindsym $mod+Shift+2 move container to workspace 2
 bindsym $mod+Shift+3 move container to workspace 3
 bindsym $mod+Shift+4 move container to workspace 4
 bindsym $mod+Shift+5 move container to workspace 5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
+bindsym $mod+Shift+6 move container to workspace $ws6
+bindsym $mod+Shift+7 move container to workspace $ws7
+bindsym $mod+Shift+8 move container to workspace $ws8
+bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace 10
 
 # reload the configuration file
@@ -152,8 +161,10 @@ bar {
 }
 
 # change volume
-bindsym $mod+equal exec pactl set-sink-volume 1 +5%
-bindsym $mod+minus exec pactl set-sink-volume 1 -- -5%
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume 1 +5%
+bindsym XF86AudioLowerVolume exec pactl set-sink-volume 1 -- -5%
+bindsym XF86AudioMute exec pactl set-sink-volume 1 0
+
 
 # lock screen
 bindsym Mod1+l exec i3lock -c 111111
@@ -190,3 +201,5 @@ client.unfocused            $tx        $bg         $fg
 client.focused              $tx        $bg         $ia
 client.focused_inactive     $tx        $bg         $ac
 client.urgent               $tx        $rd         $tx
+
+exec --no-startup-id i3-msg 'workspace $ws6; exec i3-sensible-terminal -e irssi;'
