--- a/home/.i3/config
+++ b/home/.i3/config
@@ -111,7 +111,7 @@ bindsym $mod+0 workspace 10
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace $ws1
-bindsym $mod+Shift+2 move container to workspace 2
+bindsym $mod+Shift+2 move container to workspace $ws2
 bindsym $mod+Shift+3 move container to workspace 3
 bindsym $mod+Shift+4 move container to workspace 4
 bindsym $mod+Shift+5 move container to workspace 5
@@ -165,6 +165,9 @@ bindsym XF86AudioRaiseVolume exec pactl set-sink-volume 1 +5%
 bindsym XF86AudioLowerVolume exec pactl set-sink-volume 1 -- -5%
 bindsym XF86AudioMute exec pactl set-sink-volume 1 0
 
+# change brightness
+bindsym XF86MonBrightnessDown exec ~/bin/edit_brightness -10
+bindsym XF86MonBrightnessUp exec ~/bin/edit_brightness 10
 
 # lock screen
 bindsym Mod1+l exec i3lock -c 111111
