Added scratchpad bindings.

--- a/home/.i3/config
+++ b/home/.i3/config
@@ -213,3 +213,10 @@ exec --no-startup-id i3-msg 'workspace $ws5; exec i3-sensible-terminal -e newsbe
 exec --no-startup-id feh --bg-center $HOME/.i3/simple_blue.jpg
 #exec --no-startup-id i3-msg 'workspace $ws8; exec chromium https://baopt.hipchat.com/chat --new-window && sleep 0.1'
 #exec --no-startup-id i3-msg 'workspace $ws9; exec chromium chromium --app-id=clhhggbfdinjmjhajaheehoeibfljjno && sleep 0.1 && workspace $wsg1'
+
+# Move currently selected window to scratchpad.
+bindsym $mod+Shift+minus move scratchpad
+
+# Show the first scratchpad window
+bindsym $mod+minus scratchpad show
+
