Small modification to make it work again.

--- a/home/.i3status.conf
+++ b/home/.i3status.conf
@@ -20,7 +20,7 @@ order += "wireless wlan0"
 order += "ethernet eth0"
 order += "battery 0"
 order += "volume master"
-order += "tztime local"
+order += "time"
 
 wireless wlan0 {
         format_up = "(%quality at %essid) %ip"
@@ -36,8 +36,8 @@ ethernet eth0 {
 battery 0 {
         path = "/sys/class/power_supply/BAT1/uevent" 
         format = "⚡ %percentage"
-        low_threshold = 10
-        threshold_type = percentage
+        #low_threshold = 10
+        #threshold_type = percentage
 }
 
 run_watch DHCP {
@@ -48,7 +48,7 @@ run_watch VPN {
         pidfile = "/var/run/vpnc/pid"
 }
 
-tztime local {
+time {
         format = "%Y-%m-%d ⌚ %H:%M:%S"
 }
 
