--- a/home/.newsbeuter/config
+++ b/home/.newsbeuter/config
@@ -15,3 +15,5 @@ color listfocus  color166 color235
 color info       color136 color235 
 color background color244 color234
 color article    color244 color234
+
+bind-key m toggle-show-read-feeds
