--- a/home/.i3/config
+++ b/home/.i3/config
@@ -125,6 +125,7 @@ bindsym $mod+Shift+0 move container to workspace $ws0
 
 workspace $ws1 output DVI-I-2
 workspace $ws2 output DVI-I-1
+workspace $ws3 output DVI-I-1
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
