--- a/home/.i3/config
+++ b/home/.i3/config
@@ -178,7 +178,7 @@ bindsym XF86MonBrightnessDown exec ~/bin/edit_brightness -10
 bindsym XF86MonBrightnessUp exec ~/bin/edit_brightness 10
 
 # lock screen
-bindsym Mod1+l exec i3lock -c 111111
+bindsym Mod1+l exec ~/bin/i3lock-wrapper.sh -u 
 
 # start web browser with Super+w
 bindsym Mod1+w exec x-www-browser
@@ -218,7 +218,7 @@ exec --no-startup-id i3-msg 'workspace $ws6; exec i3-sensible-terminal -e irssi;
 exec --no-startup-id i3-msg 'workspace $ws5; exec i3-sensible-terminal -e newsbeuter; workspace $ws1' 
 
 # Set wallpaper at boot.
-exec --no-startup-id feh --bg-center $HOME/.i3/simple_blue.jpg
+exec --no-startup-id feh --bg-center $HOME/.i3/batman.jpg
 exec --no-startup-id i3-msg 'workspace $ws8; exec hipchat'
 exec --no-startup-id i3-msg 'workspace $ws0; exec /home/auke/opt/Telegram/Telegram; workspace $ws1'
 
